--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
     "mongoose": "^8.5.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
